# CodeforcesCrawl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Homework.md  README.md  TODO  demo.c  frontendPlan.md  run.bat  run.sh  vcpkg.json
.github/skills/data-compositor-health-check/: SKILL.md
cmake/: copy_runtime_dlls.cmake  copy_runtime_shared_libs.cmake
docs/: Homework.md  frontendPlan.md
docs/healthcheck/: data_compositor.md
log/: log.txt
src/: main.c
src/analyser/: analyser.c
src/controller/: controller.c
src/crawler/: crawler.c
src/frontend/: index.html  styles.css  userInfo.html
src/frontend/js/: decorate.js  fetchData.js  userInfo.js
src/include/: core.h
src/include/crawler/: crawler.h
src/include/utils/: api_compositor.h  arg_utils.h  data_compositor.h  json_utils.h  logger.h  myTime.h  output.h
src/utils/: api_compositor.c  arg_utils.c  data_compositor.c  json_utils.c  logger.c  output.c  time.c
triplets/: x64-mingw-dynamic-vista.cmake
